[gd_scene load_steps=16 format=2]

[ext_resource path="res://celebration/Celebration.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GUI/celebration/Celebration.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://GUI/LevelCompleted.gd" type="Script" id=3]
[ext_resource path="res://GUI/big_holidays/Big Holidays.otf" type="DynamicFontData" id=4]
[ext_resource path="res://SFX/mixkit-audience-light-applause-354.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[node name="LevelCompleted" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = SubResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelCompletedLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "Level Completed!!!"
align = 1

[node name="YouFailedLabel" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 3 )
text = "you failed"
align = 1

[node name="YouWonLabel" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 4 )
text = "You Won!!!"
align = 1

[node name="Level2Button" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 128.0
theme = SubResource( 6 )
text = "Level 2"

[node name="Level3Button" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 128.0
theme = SubResource( 8 )
text = "Level 3"

[node name="EndGameButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 128.0
theme = SubResource( 10 )
text = "End Game"

[node name="RetryButton" type="Button" parent="VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 1024.0
margin_bottom = 128.0
theme = SubResource( 10 )
text = "Retry"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
[connection signal="pressed" from="VBoxContainer/Level2Button" to="." method="_on_Level2Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3Button" to="." method="_on_Level3Button_pressed"]
[connection signal="pressed" from="VBoxContainer/EndGameButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
